--- a/libs/home/src/lib/components/page/home/home.component.html
+++ b/libs/home/src/lib/components/page/home/home.component.html
@@ -24,6 +24,23 @@
     [categories]="categories"
   ></checkcars-car-categories>
 
+  <section class="featuresSec">
+    <div class="container">
+      <div class="row custom-row">
+        <div class="col-md-6 column1">
+          <div class="">
+            <img src="/assets/images/img1.jpg" class="img-fluid w-100" alt="">
+          </div>
+        </div>
+        <div class="col-md-6 column2">
+          <div class="content h-100 text-white">
+            <h2 class="text-uppercase">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+          </div>
+        </div>
+      </div>
+    </div>    
+  </section>
+
   <ng-container *ngIf="lastViewedVehicle$ | async as lastViewed">
     <div class="container mt-5" *ngIf="lastViewed.length > 0">
       <h2>
